--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr repeat(6, 1fr) 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    height: 580px;
+    height: 480px;
 }
 
 
@@ -13,7 +13,8 @@
     text-align: center;
     padding: 10px;
     justify-content: center;
-    grid-column-start: 3
+    grid-column-start: 3;
+    margin-left: 30px;
 }
 
 .processHeading {
@@ -812,7 +813,7 @@
         font-size: 28px;
         color: #edeec9;
         border-bottom: 1px solid white;
-        margin-left: 20px;
+        margin-left: -30px;
     }
     
     .summary {
@@ -822,7 +823,7 @@
         grid-column-end: 4;
         text-align: center;
         font-size: 18px;
-        margin-left: 20px;
+        margin-left: -30px;
     }
     
     .button {
@@ -843,6 +844,7 @@
         padding-bottom: 5px;
         grid-column-start: 2;
         grid-column-end: 4;
+        display: none;
     }
     
     .greyBox {
