--- a/src/sass/_reservations.scss
+++ b/src/sass/_reservations.scss
@@ -40,3 +40,16 @@
         display: none;
     }
 }    
+
+@media screen and (max-width: 840px) {
+    .resHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        margin-top: 25px;
+        font-size: 15px;
+        border-bottom: 1px white solid;
+        height:50px;
+    }
+}    
