--- a/src/sass/_seasonal.scss
+++ b/src/sass/_seasonal.scss
@@ -18,23 +18,69 @@
 .dishItems {
     grid-column-start: 1;
     grid-column-end: 5;
-}
+}  
 
-@media (min-width: 551px) and (max-width: 1000px){
+@media (min-width: 835px) and (max-width: 1120px){
     .seasonal {
-        margin-top: 900px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        height: 1200px;
+        height: 1500px;
     }
 }    
 
-@media (min-width: 415px) and (max-width: 550px){
+@media (min-width: 551px) and (max-width: 834px){
     .seasonal {
         margin-top: 900px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        height: 1200px;
+        height: 1100px;
+    }
+    
+    .dishItems {
+        margin-top: 20px;
+    }
+}    
+
+@media (min-width: 471px) and (max-width: 550px){
+    .seasonal {
+        margin-top: 600px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        height: 1500px;
+    }
+
+    .seasonalHeading {
+        margin-top: 300px;
+        text-align: center;
+        border-bottom: 1px solid black;
+        height: 50px;
+        width:300px;
+        font-family: 'Lexend Zetta', sans-serif;
+        grid-column-start: 3;
+        justify-content:center;
+        font-size: 20px;
+    }
+}    
+
+@media (min-width: 415px) and (max-width: 470px){
+    .seasonal {
+        margin-top: 600px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        height: 1800px;
+    }
+
+        .seasonalHeading {
+        margin-top: 300px;
+        text-align: center;
+        border-bottom: 1px solid black;
+        height: 50px;
+        width:300px;
+        font-family: 'Lexend Zetta', sans-serif;
+        grid-column-start: 3;
+        justify-content:center;
+        font-size: 20px;
+        margin-bottom: -270px;
     }
 }    
 
