--- a/src/sass/_process.scss
+++ b/src/sass/_process.scss
@@ -623,6 +623,7 @@
         text-align: center;
         padding: 10px;
         justify-content: center;
+        margin-left: -0px;
     }
     
     .processHeading {
