--- a/src/sass/_hours.scss
+++ b/src/sass/_hours.scss
@@ -137,12 +137,52 @@
     }
 }  
 
-@media (min-width: 813px) and (max-width: 1400px){
+@media (min-width: 1301px) and (max-width: 1400px){
     .hours {
         background-color:#525962;
-        height: 770px;
+        height: 470px;
         padding: 30px;
-        margin-top: -20px;
+        margin-top: -100px;
+        margin-bottom: 30px;
+    }
+}
+
+@media (min-width: 1181px) and (max-width: 1300px){
+    .hours {
+        background-color:#525962;
+        height: 470px;
+        padding: 30px;
+        margin-top: -130px;
+        margin-bottom: 30px;
+    }
+}
+
+@media (min-width: 1101px) and (max-width: 1180px){
+    .hours {
+        background-color:#525962;
+        height: 470px;
+        padding: 30px;
+        margin-top: -170px;
+        margin-bottom: 30px;
+    }
+}    
+
+@media (min-width: 981px) and (max-width: 1100px){
+    .hours {
+        background-color:#525962;
+        height: 470px;
+        padding: 30px;
+        margin-top: -170px;
+        margin-bottom: 30px;
+    }
+}       
+
+@media (min-width: 813px) and (max-width: 980px){
+    .hours {
+        background-color:#525962;
+        height: 470px;
+        padding: 30px;
+        margin-top: -220px;
         margin-bottom: 30px;
     }
 
