--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -29,3 +29,72 @@
     width: 20px;
 }
 
+@media (min-width: 797px) and (max-width: 2000px){
+    .footer {
+        background-color: #525962;
+        height: 110px;
+        margin-top: -31px;
+    }
+    
+    .footerMessage {
+        text-align: center;
+        color: white;
+        font-family: 'Lexend Peta', sans-serif;
+        margin-top: 20px;
+        font-size: 15px;
+    }
+    
+    .socialFooter {
+        margin-top:10px;
+        text-align: center;
+    }
+    
+    .social {
+        margin-right: 20px;
+        font-size: 25px;
+        color: #3b5998;
+        width: 20px;
+    }
+    
+    .social2 {
+        margin-left: 20px;
+        font-size: 25px;
+        color: #1da1f2;
+        width: 20px;
+    }
+}    
+
+@media (min-width: 300px) and (max-width: 797px){
+    .footer {
+        background-color: #525962;
+        height: 110px;
+        margin-top: -31px;
+    }
+    
+    .footerMessage {
+        text-align: center;
+        color: white;
+        font-family: 'Lexend Peta', sans-serif;
+        margin-top: 20px;
+        font-size: 10px;
+    }
+    
+    .socialFooter {
+        margin-top:10px;
+        text-align: center;
+    }
+    
+    .social {
+        margin-right: 20px;
+        font-size: 25px;
+        color: #3b5998;
+        width: 20px;
+    }
+    
+    .social2 {
+        margin-left: 20px;
+        font-size: 25px;
+        color: #1da1f2;
+        width: 20px;
+    }
+}    
