--- a/src/sass/_hours.scss
+++ b/src/sass/_hours.scss
@@ -137,7 +137,7 @@
     }
 }  
 
-@media (min-width: 1301px) and (max-width: 1400px){
+@media (min-width: 1301px) and (max-width: 2000px){
     .hours {
         background-color:#525962;
         height: 470px;
@@ -249,17 +249,76 @@
     }
 }
 
-@media (min-width: 375px) and (max-width: 470px){
+@media (min-width: 471px) and (max-width: 550px){
+    #hoursCard {
+        background-color: #edeec9; 
+        grid-column-start: 1;
+        grid-column-end: 14;
+        -webkit-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        -moz-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        z-index: 4;
+        height: 380px;
+        margin-top: -40px;
+        margin-left: 65px;
+        width: 370px;
+    }
+    
     .mobileMap {
         margin-left: -5px;
-        margin-top: -20px;
+        margin-top: 20px;
         width: 400px;
     }
 
     .hours {
         background-color:#525962;
-        height: 470px;
+        height: 670px;
         padding: 30px;
+        margin-top: -1px;
+    }
+
+    .locale {
+        margin-left: 10px;
+    }
+    
+    #locale1{
+        margin-left: 10px;
+    }
+}    
+
+@media (min-width: 375px) and (max-width: 470px){
+    #hoursCard {
+        background-color: #edeec9; 
+        grid-column-start: 1;
+        grid-column-end: 14;
+        -webkit-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        -moz-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        z-index: 4;
+        height: 380px;
+        margin-top: -140px;
+        margin-left: -15px;
+        width: 370px;
+    }
+    
+    .mobileMap {
+        margin-left: -5px;
+        margin-top: 20px;
+        width: 400px;
+    }
+
+    .hours {
+        background-color:#525962;
+        height: 570px;
+        padding: 30px;
+    }
+
+    .locale {
+        margin-left: 10px;
+    }
+    
+    #locale1{
+        margin-left: 10px;
     }
 }
 
@@ -273,8 +332,36 @@
 
 
 @media (min-width: 300px) and (max-width: 320px){
+    #hoursCard {
+        background-color: #edeec9; 
+        grid-column-start: 1;
+        grid-column-end: 14;
+        -webkit-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        -moz-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
+        z-index: 4;
+        height: 380px;
+        margin-top: -140px;
+        margin-left: -30px;
+    }
+    
     .mobileMap {
         margin-left: -5px;
-        margin-top: -20px;
+        margin-top: 20px;
+    }
+
+    .locale {
+        margin-left: 0px;
+    }
+    
+    #locale1{
+        margin-left: 0px;
+    }
+    .hours {
+        background-color:#525962;
+        display: grid;
+        grid-template-columns: repeat(28, 1fr);
+        height: 570px;
+        padding: 30px;
     }
 }   
