--- a/src/sass/_seasonal.scss
+++ b/src/sass/_seasonal.scss
@@ -20,11 +20,26 @@
     grid-column-end: 5;
 }  
 
-@media (min-width: 835px) and (max-width: 1120px){
+@media (min-width: 835px) and (max-width: 2020px){
     .seasonal {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        height: 1500px;
+        height: 1100px;
+    }
+
+    .seasonalHeading {
+        text-align: center;
+        border-bottom: 1px solid black;
+        height: 50px;
+        width:500px;
+        font-family: 'Lexend Zetta', sans-serif;
+        grid-column-start: 3;
+        justify-content:center;
+        margin-top: 20px;
+    }
+    
+    .dishItems {
+        margin-top: 20px;
     }
 }    
 
