--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +10,10 @@
 .container {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
+}
+
+.navbar {
+    display: none;
 }
 
 .header {
