--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -72,54 +72,54 @@ html {
     height: 20vh;
 }
 
-#ot-widget-container5{
-    display:none;
-}
+// #ot-widget-container5{
+//     display:none;
+// }
 
-#ot-widget-container2{
-    display:none;
-}
+// #ot-widget-container2{
+//     display:none;
+// }
 
-#ot-widget-container3{
-    display:none;
-}
+// #ot-widget-container3{
+//     display:none;
+// }
 
-#ot-widget-container4{
-    display:none;
-}
+// #ot-widget-container4{
+//     display:none;
+// }
 
-#ot-widget-container5{
-    display:none;
-}
+// #ot-widget-container5{
+//     display:none;
+// }
 
-#ot-widget-container6{
-    display:none;
-}
+// #ot-widget-container6{
+//     display:none;
+// }
 
-#ot-widget-container7{
-    display:none;
-}
+// #ot-widget-container7{
+//     display:none;
+// }
 
-#ot-widget-container11{
-    display:none;
-}
+// #ot-widget-container11{
+//     display:none;
+// }
 
-#ot-widget-container8{
-    display:none;
-}
+// #ot-widget-container8{
+//     display:none;
+// }
 
-#ot-widget-container9{
-    display:none;
-}
+// #ot-widget-container9{
+//     display:none;
+// }
 
-#ot-widget-container10{
-    display:none;
-}
+// #ot-widget-container10{
+//     display:none;
+// }
 
-#ot-widget-container11{
-    display:none;
-}
+// #ot-widget-container11{
+//     display:none;
+// }
 
-#ot-widget-container12{
-    display:none;
-}
+// #ot-widget-container12{
+//     display:none;
+// }
