--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -145,7 +145,8 @@
         grid-template-rows: repeat(21, 1fr);
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
-        height: 800px;
+        // height: 800px;
+        height: 2000px; // TEMPORARY SEASONAL FIX!!!
     }
     
     #menu1 {
@@ -275,7 +276,8 @@
         grid-template-rows: repeat(21, 1fr);
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
-        height: 800px;
+        // height: 800px;
+        height: 2000px; // TEMPORARY SEASONAL FIX!!!
     }
     
     #menu1 {
@@ -403,7 +405,8 @@
         grid-template-rows: repeat(21, 1fr);
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
-        height: 800px;
+        // height: 800px;
+        height: 2000px; // TEMPORARY SEASONAL FIX!!!
     }
     
     #menu1 {
@@ -531,7 +534,8 @@
         grid-template-rows: repeat(21, 1fr);
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
-        height: 800px;
+        // height: 800px; CORRECT HEIGHT AFTER SEASONAL!
+        height: 2000px; // TEMPORARY SEASONAL FIX!!!
     }
     
     #menu1 {
@@ -539,7 +543,7 @@
         height: 650px;
         grid-column-start: 3;
         grid-column-end: 20;
-        margin-top: -110px;
+        margin-top: -110px; 
         z-index: 1;
         -webkit-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
         -moz-box-shadow: 10px 9px 5px 0px rgba(48,51,46,0.43);
@@ -660,6 +664,7 @@
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
         height: 800px;
+        height: 2000px; // TEMPORARY SEASONAL FIX!!!
     }
     
     #menu1 {
@@ -787,7 +792,8 @@
         grid-template-rows: repeat(21, 1fr);
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
-        height: 800px;
+        // height: 800px;
+        height: 2000px; // TEMPORARY SEASONAL FIX!!!
     }
     
     #menu1 {
