--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -145,8 +145,7 @@
         grid-template-rows: repeat(21, 1fr);
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
-        // height: 800px;
-        height: 2000px; // TEMPORARY SEASONAL FIX!!!
+        height: 800px;
     }
     
     #menu1 {
@@ -276,8 +275,7 @@
         grid-template-rows: repeat(21, 1fr);
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
-        // height: 800px;
-        height: 2000px; // TEMPORARY SEASONAL FIX!!!
+        height: 800px;
     }
     
     #menu1 {
@@ -405,8 +403,7 @@
         grid-template-rows: repeat(21, 1fr);
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
-        // height: 800px;
-        height: 2000px; // TEMPORARY SEASONAL FIX!!!
+        height: 800px;
     }
     
     #menu1 {
@@ -534,8 +531,7 @@
         grid-template-rows: repeat(21, 1fr);
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
-        // height: 800px; CORRECT HEIGHT AFTER SEASONAL!
-        height: 2000px; // TEMPORARY SEASONAL FIX!!!
+        height: 800px;
     }
     
     #menu1 {
@@ -664,7 +660,6 @@
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
         height: 800px;
-        height: 2000px; // TEMPORARY SEASONAL FIX!!!
     }
     
     #menu1 {
@@ -792,8 +787,7 @@
         grid-template-rows: repeat(21, 1fr);
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
-        // height: 800px;
-        height: 2000px; // TEMPORARY SEASONAL FIX!!!
+        height: 800px;
     }
     
     #menu1 {
