--- a/src/components/Employment/Employment.scss
+++ b/src/components/Employment/Employment.scss
@@ -1,7 +1,12 @@
 .contactForm {
+    margin-top: 25vh;
     text-align: center;
 }
 
 .fieldCon {
     width: 60vw;
+}
+
+#messageForm {
+    height: 40vh;
 }
