--- a/src/components/Employment/employment2.scss
+++ b/src/components/Employment/employment2.scss
@@ -21,3 +21,23 @@
 #idCon {
     height: 20px;
 }
+
+.button {
+    background-color: #30332e;
+    color: white;
+    border: 1px solid white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    grid-column-start: 3;
+    margin-top: 50px;
+    width:21vw;
+    height:60px;
+    font-family: 'Lexend Zetta', sans-serif;
+    padding-bottom: 15px;
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
