--- a/src/components/Employment/employment2.scss
+++ b/src/components/Employment/employment2.scss
@@ -1,13 +1,19 @@
-.contactContainer {
+.contact {
     height: 100vh;
     background-color: #525962;
     display: grid;
     grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(9, 1fr);
+}
+
+.contactContainer {
+    grid-column-start: 5;
+    grid-row-start: 3;
+    text-align: center;
 }
 
 .contactForm {
     text-align: center;
-    grid-row-start: 3;
 }
 
 .fieldCon {
@@ -15,14 +21,14 @@
 }
 
 #messageForm {
-    height: 40vh;
+    height: 50vh;
 }
 
 #idCon {
     height: 20px;
 }
 
-.button {
+.buttonEmp {
     background-color: #30332e;
     color: white;
     border: 1px solid white;
@@ -40,4 +46,19 @@
     padding-bottom: 15px;
     grid-column-start: 2;
     grid-column-end: 4;
+    margin-top: -20px;
+}
+
+.contactHeading {
+    color: #EDEEC9;
+    font-family: 'Lexend Zetta', sans-serif;
+    text-align: center;
+    grid-column-start: 5;
+    grid-row-start: 1;
+    margin-top: 25px;
+    font-size: 15px;
+    width: 70vw;
+    border-bottom: 1px white solid;
+    height:50px;
+    margin-top: 200px;
 }
