--- a/src/sass/_hours.scss
+++ b/src/sass/_hours.scss
@@ -84,6 +84,10 @@
         height: 970px;
         padding: 30px;
     }
+
+    .hoursCardContainer {
+        
+    }
     
     #hoursCard {
         background-color: #edeec9; 
@@ -140,12 +144,20 @@
 @media (min-width: 1301px) and (max-width: 2000px){
     .hours {
         background-color:#525962;
-        height: 470px;
+        height: 490px;
         padding: 30px;
-        margin-top: -100px;
+        margin-top: -1px;
         margin-bottom: 30px;
     }
-}
+
+    .hoursCard {
+        margin-top: 200px;
+    }
+
+    .map {
+        margin-top: 0px;
+    }
+}  
 
 @media (min-width: 1181px) and (max-width: 1300px){
     .hours {
@@ -361,7 +373,7 @@
         background-color:#525962;
         display: grid;
         grid-template-columns: repeat(28, 1fr);
-        height: 570px;
+        height: 650px;
         padding: 30px;
     }
 }   
