--- a/src/components/Employment/employment2.scss
+++ b/src/components/Employment/employment2.scss
@@ -1,8 +1,8 @@
 .contact {
-    height: 100vh;
+    height: 104vh;
     background-color: #525962;
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(9, 1fr);
 }
 
@@ -54,11 +54,20 @@
     font-family: 'Lexend Zetta', sans-serif;
     text-align: center;
     grid-column-start: 5;
-    grid-row-start: 1;
+    grid-row-start: 3;
     margin-top: 25px;
     font-size: 15px;
-    width: 70vw;
+    width: 50vw;
     border-bottom: 1px white solid;
-    height:50px;
+    height:40px;
+    margin-bottom: 10px;
     margin-top: 200px;
+}
+
+.footer {
+    width: 100vw;
+}
+
+#employmentButton {
+    margin-bottom: -100px;
 }
