--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -533,6 +533,7 @@
         grid-template-rows: repeat(4, 1fr);
         margin-bottom: 240px;
         height: 800px;
+        z-index: 1;
     }
     
     #menu1 {
