--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -13,23 +13,6 @@
   width:80px;
 }
 
-ul {
-  list-style: none;
-  text-align: center;
-  font-family: 'Lexend Peta', sans-serif;
-  filter: brightness(100%);
-}
-
-ul li {
-  display: inline-block;
-  padding: 6vh 7.0vw;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
 .acornHeading {
 display: block;
 margin-left: auto;
@@ -165,33 +148,84 @@ opacity: 0;
 transform: scale(0.1, 1);
 }
 
-.mobileNavbar {
-  position: fixed;
-  width: 100%;
-  background-color: white;
-  display: flex;
-  height: 70px;
-  z-index: 9999;
-  margin-bottom: 200px;
-}
-
-.acornMobile {
-  height: 60px;
-  width: 60px;
-  margin-left: 20px;
-  margin-top: 5px;
-}
-
 .mobileNavItems {
   height: 200px;
   width: 200px;
 }
 
-@media (min-width: 1201px) and (max-width: 5000px){
-  .mobileNavbar {
+@media (min-width: 1201px) and (max-width: 4000px) {
+  .mobileWrapper {
     display: none;
   }
-}
+
+  .mobileNavItems {
+    display: none;
+  }
+
+  ul {
+    list-style: none;
+    text-align: center;
+    font-family: 'Lexend Peta', sans-serif;
+    filter: brightness(100%);
+  }
+  
+  ul li {
+    display: inline-block;
+    padding: 6vh 7.0vw;
+  }
+  
+  a {
+    text-decoration: none;
+    color: white;
+  }
+}  
+
+@media (min-width: 300px) and (max-width: 1200px){
+  .desktopNav {
+    display: none;
+  }
+}  
+
+// START MOBILE MENU STYLES
+
+
+// .mobileNavDiv {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   background-color: white;
+//   height: 70px;
+//   z-index: 9999;
+//   margin-bottom: 200px;
+// }
+
+// .mobileLogo {
+//   font-size: 1.5rem;
+// }
+
+// .mobileNavbarNavigation {
+//   display: flex;
+//   align-items: center;
+// }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (min-width: 300px) and (max-width: 320px){
 .header {
@@ -206,20 +240,6 @@ transform: scale(0.1, 1);
   margin-bottom: -30px;
   height:80px;
   width:80px;
-  display: none;
-}
-
-ul {
-  list-style: none;
-  text-align: center;
-  font-family: 'Lexend Peta', sans-serif;
-  filter: brightness(100%);
-  display: none;
-}
-
-ul li {
-  display: inline-block;
-  padding: 6vh 7.0vw;
 }
 
 a {
@@ -231,7 +251,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -430px;
+  margin-top: -480px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -301,19 +321,6 @@ a {
   display: none;
 }
 
-ul {
-  list-style: none;
-  text-align: center;
-  font-family: 'Lexend Peta', sans-serif;
-  filter: brightness(100%);
-  display: none;
-}
-
-ul li {
-  display: inline-block;
-  padding: 6vh 7.0vw;
-}
-
 a {
   text-decoration: none;
   color: white;
@@ -323,7 +330,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -560px;
+  margin-top: -670px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -332,6 +339,7 @@ a {
   color: white;
   font-family: 'Hepta Slab', serif;
   text-align: center;
+  font-size: 20px;
   margin-top: 40px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
@@ -340,7 +348,7 @@ a {
 .quote5280 {
   color: white;
   text-align:center;
-  font-size: 18px;
+  font-size: 14px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -349,6 +357,7 @@ a {
   color: white;
   font-family: 'Hepta Slab', serif;
   text-align: center;
+  font-size: 20px;
   margin-top: 40px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
@@ -357,7 +366,7 @@ a {
 .quoteYelp{
   color: white;
   text-align:center;
-  font-size: 20px;
+  font-size: 14px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -388,20 +397,6 @@ a {
   margin-bottom: -30px;
   height:80px;
   width:80px;
-  display: none;
-}
-
-ul {
-  list-style: none;
-  text-align: center;
-  font-family: 'Lexend Peta', sans-serif;
-  filter: brightness(100%);
-  display: none;
-}
-
-ul li {
-  display: inline-block;
-  padding: 6vh 7.0vw;
 }
 
 a {
@@ -413,7 +408,7 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -530px;
+  margin-top: -620px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -423,6 +418,7 @@ a {
   font-family: 'Hepta Slab', serif;
   text-align: center;
   margin-top: 40px;
+  font-size: 20px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -430,7 +426,7 @@ a {
 .quote5280 {
   color: white;
   text-align:center;
-  font-size: 18px;
+  font-size: 14px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -439,6 +435,7 @@ a {
   color: white;
   font-family: 'Hepta Slab', serif;
   text-align: center;
+  font-size: 20px;
   margin-top: 40px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
@@ -447,7 +444,7 @@ a {
 .quoteYelp{
   color: white;
   text-align:center;
-  font-size: 20px;
+  font-size: 14px;
   -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
   animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
@@ -478,20 +475,6 @@ a {
   margin-bottom: -30px;
   height:80px;
   width:80px;
-  display: none;
-}
-
-ul {
-  list-style: none;
-  text-align: center;
-  font-family: 'Lexend Peta', sans-serif;
-  filter: brightness(100%);
-  display: none;
-}
-
-ul li {
-  display: inline-block;
-  padding: 6vh 7.0vw;
 }
 
 a {
@@ -568,20 +551,6 @@ a {
   margin-bottom: -30px;
   height:80px;
   width:80px;
-  display: none;
-}
-
-ul {
-  list-style: none;
-  text-align: center;
-  font-family: 'Lexend Peta', sans-serif;
-  filter: brightness(100%);
-  display: none;
-}
-
-ul li {
-  display: inline-block;
-  padding: 6vh 7.0vw;
 }
 
 a {
@@ -658,20 +627,6 @@ a {
   margin-bottom: -30px;
   height:80px;
   width:80px;
-  display: none;
-}
-
-ul {
-  list-style: none;
-  text-align: center;
-  font-family: 'Lexend Peta', sans-serif;
-  filter: brightness(100%);
-  display: none;
-}
-
-ul li {
-  display: inline-block;
-  padding: 6vh 7.0vw;
 }
 
 a {
@@ -748,20 +703,6 @@ a {
   margin-bottom: -30px;
   height:80px;
   width:80px;
-  display: none;
-}
-
-ul {
-  list-style: none;
-  text-align: center;
-  font-family: 'Lexend Peta', sans-serif;
-  filter: brightness(100%);
-  display: none;
-}
-
-ul li {
-  display: inline-block;
-  padding: 6vh 7.0vw;
 }
 
 a {
@@ -825,9 +766,3 @@ a {
 }
 } 
 
-@media (min-width: 1201px) and (max-width: 1355px){
-    ul li {
-      display: inline-block;
-      padding: 6vh 6vw;
-    }
-}  
