--- a/src/components/Pages/about.scss
+++ b/src/components/Pages/about.scss
@@ -119,7 +119,7 @@
         color: #edeec9;
         padding: 10px;
         font-size: 15px;
-        width: 354px;
+        width: 83vw;
         margin-left: -20px;
         height: 120px;
         margin-top: 20px;
@@ -135,7 +135,7 @@
         color: #edeec9;
         padding: 10px;
         font-size: 15px;
-        width: 353px;
+        width: 83vw;
         margin-top: 20px;
         height: 120px;
     }
