--- a/src/components/Pages/about.scss
+++ b/src/components/Pages/about.scss
@@ -295,7 +295,7 @@
         color: #edeec9;
         padding: 10px;
         font-size: 13px;
-        width: 280px;
+        width: 75vw;
         margin-left: -20px;
         height: 120px;
         margin-top: 20px;
@@ -311,7 +311,7 @@
         color: #edeec9;
         padding: 10px;
         font-size: 13px;
-        width: 280px;
+        width: 75vw;
         margin-top: 20px;
         height: 120px;
     }
