--- a/src/sass/_hours.scss
+++ b/src/sass/_hours.scss
@@ -2,7 +2,7 @@
     background-color:#525962;
     display: grid;
     grid-template-columns: repeat(28, 1fr);
-    height: 470px;
+    height: 480px;
     padding: 30px;
 }
 
@@ -147,7 +147,7 @@
         height: 490px;
         padding: 30px;
         margin-top: -1px;
-        margin-bottom: 30px;
+        margin-bottom: -11px
     }
 
     .hoursCard {
