--- a/src/components/Employment/employment2.scss
+++ b/src/components/Employment/employment2.scss
@@ -61,13 +61,392 @@
     border-bottom: 1px white solid;
     height:40px;
     margin-bottom: 10px;
-    margin-top: 200px;
+    margin-top: 80px;
 }
 
 .footer {
     width: 100vw;
+    margin-top: -100px;
 }
 
 #employmentButton {
     margin-bottom: -100px;
 }
+
+@media (min-width: 601px) and (max-width: 700px){
+    .contact {
+        height: 100vh;
+        background-color: #525962;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    .contactContainer {
+        height: 40vw;
+        text-align: center;
+    }
+    
+    .contactForm {
+        text-align: center;
+    }
+    
+    .fieldCon {
+        width: 35vw;
+        width: 80vw;
+    }
+    
+    #messageForm {
+        height: 50vh;
+    }
+    
+    #idCon {
+        height: 20px;
+    }
+    
+    .buttonEmp {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 13px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: 50px;
+        width:70vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 15px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 20px;
+    }
+    
+    .contactHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        grid-row-start: 3;
+        margin-top: -110px;
+        font-size: 12px;
+        width: 95vw;
+        border-bottom: 1px white solid;
+        height:40px;
+        margin-bottom: 10px;
+    }
+    
+    .footer {
+        width: 100vw;
+        margin-bottom: -30px;
+    }
+    
+    #employmentButton {
+        margin-bottom: -100px;
+        display: none;
+    }
+} 
+
+@media (min-width: 501px) and (max-width: 600px){
+    .contact {
+        height: 100vh;
+        background-color: #525962;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    .contactContainer {
+        height: 40vw;
+        text-align: center;
+    }
+    
+    .contactForm {
+        text-align: center;
+    }
+    
+    .fieldCon {
+        width: 35vw;
+        width: 80vw;
+    }
+    
+    #messageForm {
+        height: 50vh;
+    }
+    
+    #idCon {
+        height: 20px;
+    }
+    
+    .buttonEmp {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 13px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: 50px;
+        width:70vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 15px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 20px;
+    }
+    
+    .contactHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        grid-row-start: 3;
+        margin-top: -220px;
+        font-size: 12px;
+        width: 95vw;
+        border-bottom: 1px white solid;
+        height:40px;
+        margin-bottom: 10px;
+    }
+    
+    .footer {
+        width: 100vw;
+    }
+    
+    #employmentButton {
+        margin-bottom: -100px;
+    }
+} 
+
+@media (min-width: 401px) and (max-width: 500px){
+    .contact {
+        height: 100vh;
+        background-color: #525962;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    .contactContainer {
+        height: 40vw;
+        text-align: center;
+    }
+    
+    .contactForm {
+        text-align: center;
+    }
+    
+    .fieldCon {
+        width: 35vw;
+        width: 80vw;
+    }
+    
+    #messageForm {
+        height: 50vh;
+    }
+    
+    #idCon {
+        height: 20px;
+    }
+    
+    .buttonEmp {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 13px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: 50px;
+        width:70vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 15px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 20px;
+    }
+    
+    .contactHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        grid-row-start: 3;
+        margin-top: -220px;
+        font-size: 12px;
+        width: 95vw;
+        border-bottom: 1px white solid;
+        height:40px;
+        margin-bottom: 10px;
+    }
+    
+    .footer {
+        width: 100vw;
+    }
+    
+    #employmentButton {
+        margin-bottom: -100px;
+    }
+} 
+
+@media (min-width: 321px) and (max-width: 400px){
+    .contact {
+        height: 100vh;
+        background-color: #525962;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    .contactContainer {
+        height: 40vw;
+        text-align: center;
+    }
+    
+    .contactForm {
+        text-align: center;
+    }
+    
+    .fieldCon {
+        width: 35vw;
+        width: 80vw;
+    }
+    
+    #messageForm {
+        height: 50vh;
+    }
+    
+    #idCon {
+        height: 20px;
+    }
+    
+    .buttonEmp {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 13px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: 50px;
+        width:70vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 15px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 20px;
+    }
+    
+    .contactHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        grid-row-start: 3;
+        margin-top: -220px;
+        font-size: 12px;
+        width: 95vw;
+        border-bottom: 1px white solid;
+        height:40px;
+        margin-bottom: 10px;
+    }
+    
+    .footer {
+        width: 100vw;
+    }
+    
+    #employmentButton {
+        margin-bottom: -100px;
+    }
+}    
+
+@media (min-width: 300px) and (max-width: 320px){
+    .contact {
+        height: 100vh;
+        background-color: #525962;
+        display: grid;
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: repeat(9, 1fr);
+    }
+    
+    .contactContainer {
+        height: 40vw;
+        text-align: center;
+    }
+    
+    .contactForm {
+        text-align: center;
+    }
+    
+    .fieldCon {
+        width: 35vw;
+        width: 80vw;
+    }
+    
+    #messageForm {
+        height: 50vh;
+    }
+    
+    #idCon {
+        height: 20px;
+    }
+    
+    .buttonEmp {
+        background-color: #30332e;
+        color: white;
+        border: 1px solid white;
+        padding: 15px 32px;
+        text-align: center;
+        display: inline-block;
+        font-size: 13px;
+        margin: 4px 2px;
+        cursor: pointer;
+        grid-column-start: 3;
+        margin-top: 50px;
+        width:70vw;
+        height:60px;
+        font-family: 'Lexend Zetta', sans-serif;
+        padding-bottom: 15px;
+        grid-column-start: 2;
+        grid-column-end: 4;
+        margin-top: 20px;
+    }
+    
+    .contactHeading {
+        color: #EDEEC9;
+        font-family: 'Lexend Zetta', sans-serif;
+        text-align: center;
+        grid-column-start: 5;
+        grid-row-start: 3;
+        margin-top: 25px;
+        font-size: 10px;
+        width: 95vw;
+        border-bottom: 1px white solid;
+        height:40px;
+        margin-bottom: 10px;
+        margin-top: -140px;
+    }
+    
+    .footer {
+        width: 100vw;
+    }
+    
+    #employmentButton {
+        margin-bottom: -100px;
+    }
+}    
