--- a/src/components/Employment/employment2.scss
+++ b/src/components/Employment/employment2.scss
@@ -312,6 +312,7 @@
     .contactContainer {
         height: 40vw;
         text-align: center;
+        margin-bottom: 70px;
     }
     
     .contactForm {
@@ -387,6 +388,7 @@
     .contactContainer {
         height: 40vw;
         text-align: center;
+        margin-top: -30px;
     }
     
     .contactForm {
@@ -442,7 +444,7 @@
         margin-top: -140px;
     }
     
-    .footer {
+    .footerCon {
         width: 100vw;
     }
     
