--- a/src/components/Employment/employment2.scss
+++ b/src/components/Employment/employment2.scss
@@ -64,7 +64,7 @@
     margin-top: 80px;
 }
 
-.footer {
+.footerCon {
     width: 100vw;
     margin-top: -100px;
 }
@@ -139,7 +139,7 @@
         margin-bottom: 10px;
     }
     
-    .footer {
+    .footerCon {
         width: 100vw;
         margin-bottom: -30px;
     }
@@ -216,7 +216,7 @@
         margin-bottom: 10px;
     }
     
-    .footer {
+    .footerCon {
         width: 100vw;
     }
     
@@ -291,7 +291,7 @@
         margin-bottom: 10px;
     }
     
-    .footer {
+    .footerCon {
         width: 100vw;
     }
     
@@ -367,7 +367,7 @@
         margin-bottom: 10px;
     }
     
-    .footer {
+    .footerCon {
         width: 100vw;
     }
     
