--- a/src/components/Header/_mobilestyle.scss
+++ b/src/components/Header/_mobilestyle.scss
@@ -2,7 +2,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 100;
+    z-index: 1000;
+    overflow: hidden;
 }
 
 
@@ -25,7 +26,7 @@
     width: 60px;
     height: 60px;
     padding: 1rem;
-    background: #fff;
+    background: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
